# mlops_hse_2024

./: README.md
homeworks/: Домашнее задание 1.pdf:Zone.Identifier
seminars/sem_2_code_poetry/: CHANGELOG  bad_code.py.txt  bad_requirements.txt  commands  parallel.py  pyproject.toml  requirements.in  requirements.txt  sem_scenary.txt  setup.py
seminars/sem_4_docker/: Dockerfile_1  Dockerfile_2  Dockerfile_3  Dockerfile_4  Dockerfile_5  docker-compose.yml  postgres.env  scenario  что делаем
seminars/sem_4_docker/volume_dir/: test1
seminars/sem_5_fastapi_and_grpc/: app.py  pyproject.toml
seminars/sem_6_git_and_minio/: .pre-commit-config.yaml  pyproject.toml  requirements.txt  Что делали
seminars/sem_6_git_and_minio/gRPC/: client.py  main.py  pyproject.toml  service.py  test_grpc.proto  команда компиляции прото файла
seminars/sem_6_git_and_minio/my_hooks/: gachi-print.py
seminars/sem_6_git_and_minio/test_pre_commit/: test.py  test_1.py
seminars/sem_7_streamlit/: app.py
seminars/sem_8_dvc_clearml/: что делали
slides/: REST API, RPC, pr 4 (1).pdf:Zone.Identifier  Работа с кодом, pr 2.pdf:Zone.Identifier
