[tool.poetry]
name = "test-fastapi"
version = "0.1.0"
description = ""
authors = ["illuser <illuser@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["full"], version = "^0.103.2"}
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
