[tool.poetry]
name = "test-pre-commit"
version = "0.1.2"
description = "Test"
authors = ["illuser <illuser@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.6"
pytz = "^2023.3.post1"


[tool.poetry.group.dev.dependencies]
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
