[tool.poetry]
name = "test_grpc"
version = "0.1.0"
description = ""
authors = ["illuser-maker"]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.49.1"
grpcio-tools = "^1.49.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
